Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-9835

Qt Creator 2.8/master: crash when opening qtbase.pro of stable branch (18.7.2013)

    XMLWordPrintable

Details

    • d022a2d19cecb00397c2a215fc4e3bf64b1e627b

    Description

      Remove any existing qtbase.pro.user, open qtbase.pro (stable), click to configure project, observe crash:

      QInotifyFileSystemWatcherEngine::addPaths: inotify_add_watch failed: No such file or directory
      QFileSystemWatcher: failed to add paths: /mkspecs/modules/qt_tool_syncqt.pri
      QInotifyFileSystemWatcherEngine::addPaths: inotify_add_watch failed: No such file or directory
      QFileSystemWatcher: failed to add paths: /depot/fkleint/qt-5s/qtbase/mkspecs/modules/qt_tool_syncqt.pri
      
      &"where\n"
      >~"#0  0x0000000000407c8b in QBasicAtomicInt::ref (this=0x78006500100208) at /depot/fkleint/qt-48/include/QtCore/../../src/corelib/arch/qatomic_x86_64.h:121\n"
      >~"#1  0x00007fffe4057789 in QVector<ProString>::QVector (this=0x7ffef0027510, v=...) at /depot/fkleint/qt-48/include/QtCore/../../src/corelib/tools/qvector.h:123\n"
      >~"#2  0x00007fffe4056cf3 in ProStringList::ProStringList (this=0x7ffef0027510) at ../../shared/proparser/proitems.h:223\n"
      >~"#3  0x00007fffe405cb0f in QHashNode<ProKey, ProStringList>::QHashNode (this=0x7ffef00274e0, key0=..., value0=...) at /depot/fkleint/qt-48/include/QtCore/../../src/corelib/tools/qhash.h:224\n"
      >~"#4  0x00007fffe405c5c1 in QHash<ProKey, ProStringList>::duplicateNode (node=0x7fff4020be50, newNode=0x7ffef00274e0) at /depot/fkleint/qt-48/include/QtCore/../../src/corelib/tools/qhash.h:532\n"
      >~"#5  0x00007ffff63438d2 in QHashData::detach_helper2 (this=0x7fff28077bd0, node_duplicate=0x7fffe405c568 <QHash<ProKey, ProStringList>::duplicateNode(QHashData::Node*, void*)>, node_delete=0x7fffe405c546 <QHash<ProKey, ProStringList>::deleteNode2(QHashData::Node*)>, nodeSize=56, nodeAlign=8) at tools/qhash.cpp:239\n"
      >~"#6  0x00007fffe405a59a in QHash<ProKey, ProStringList>::detach_helper (this=0x7fff40148100) at /depot/fkleint/qt-48/include/QtCore/../../src/corelib/tools/qhash.h:584\n"
      >~"#7  0x00007fffe405a546 in QHash<ProKey, ProStringList>::detach (this=0x7fff40148100) at /depot/fkleint/qt-48/include/QtCore/../../src/corelib/tools/qhash.h:303\n"
      >~"#8  0x00007fffe4059a12 in QHash<ProKey, ProStringList>::find (this=0x7fff40148100, akey=...) at /depot/fkleint/qt-48/include/QtCore/../../src/corelib/tools/qhash.h:867\n"
      >~"#9  0x00007fffe40551df in QMakeEvaluator::valuesRef (this=0x7fff40009460, variableName=...) at ../../shared/proparser/qmakeevaluator.cpp:1759\n"
      >~"#10 0x00007fffe406d47f in QMakeEvaluator::evaluateBuiltinConditional (this=0x2caaa40, func_t=28, function=..., args=...) at ../../shared/proparser/qmakebuiltins.cpp:1543\n"
      >~"#11 0x00007fffe4054ae8 in QMakeEvaluator::evaluateConditionalFunction (this=0x2caaa40, func=..., tokPtr=@0x7fff11ff7bf0: 0x7fff28088c96) at ../../shared/proparser/qmakeevaluator.cpp:1679\n"
      >~"#12 0x00007fffe404c351 in QMakeEvaluator::visitProBlock (this=0x2caaa40, tokPtr=0x7fff28088c96) at ../../shared/proparser/qmakeevaluator.cpp:654\n"
      >~"#13 0x00007fffe404bba7 in QMakeEvaluator::visitProBlock (this=0x2caaa40, tokPtr=0x7fff2808664a) at ../../shared/proparser/qmakeevaluator.cpp:560\n"
      >~"#14 0x00007fffe404b917 in QMakeEvaluator::visitProBlock (this=0x2caaa40, pro=0x7fff28075170, tokPtr=0x7fff2808621a) at ../../shared/proparser/qmakeevaluator.cpp:515\n"
      >~"#15 0x00007fffe4051915 in QMakeEvaluator::visitProFile (this=0x2caaa40, pro=0x7fff28075170, type=QMakeHandler::EvalFeatureFile, flags=...) at ../../shared/proparser/qmakeevaluator.cpp:1375\n"
      >~"#16 0x00007fffe4055670 in QMakeEvaluator::evaluateFile (this=0x2caaa40, fileName=..., type=QMakeHandler::EvalFeatureFile, flags=...) at ../../shared/proparser/qmakeevaluator.cpp:1809\n"
      >~"#17 0x00007fffe4056151 in QMakeEvaluator::evaluateFeatureFile (this=0x2caaa40, fileName=..., silent=false) at ../../shared/proparser/qmakeevaluator.cpp:1915\n"
      >~"#18 0x00007fffe406c07d in QMakeEvaluator::evaluateBuiltinConditional (this=0x2caaa40, func_t=18, function=..., args=...) at ../../shared/proparser/qmakebuiltins.cpp:1311\n"
      >~"#19 0x00007fffe4054ae8 in QMakeEvaluator::evaluateConditionalFunction (this=0x2caaa40, func=..., tokPtr=@0x7fff11ff92d0: 0x7fff28080106) at ../../shared/proparser/qmakeevaluator.cpp:1679\n"
      >~"#20 0x00007fffe404c351 in QMakeEvaluator::visitProBlock (this=0x2caaa40, tokPtr=0x7fff28080106) at ../../shared/proparser/qmakeevaluator.cpp:654\n"
      >~"#21 0x00007fffe404b917 in QMakeEvaluator::visitProBlock (this=0x2caaa40, pro=0x7fff2805ceb0, tokPtr=0x7fff2807f3ca) at ../../shared/proparser/qmakeevaluator.cpp:515\n"
      >~"#22 0x00007fffe4051915 in QMakeEvaluator::visitProFile (this=0x2caaa40, pro=0x7fff2805ceb0, type=QMakeHandler::EvalFeatureFile, flags=...) at ../../shared/proparser/qmakeevaluator.cpp:1375\n"
      >~"#23 0x00007fffe4055670 in QMakeEvaluator::evaluateFile (this=0x2caaa40, fileName=..., type=QMakeHandler::EvalFeatureFile, flags=...) at ../../shared/proparser/qmakeevaluator.cpp:1809\n"
      >~"#24 0x00007fffe4056151 in QMakeEvaluator::evaluateFeatureFile (this=0x2caaa40, fileName=..., silent=false) at ../../shared/proparser/qmakeevaluator.cpp:1915\n"
      >~"#25 0x00007fffe406c07d in QMakeEvaluator::evaluateBuiltinConditional (this=0x2caaa40, func_t=18, function=..., args=...) at ../../shared/proparser/qmakebuiltins.cpp:1311\n"
      >~"#26 0x00007fffe4054ae8 in QMakeEvaluator::evaluateConditionalFunction (this=0x2caaa40, func=..., tokPtr=@0x7fff11ffa890: 0x7ffef0013ea8) at ../../shared/proparser/qmakeevaluator.cpp:1679\n"
      >~"#27 0x00007fffe404c351 in QMakeEvaluator::visitProBlock (this=0x2caaa40, tokPtr=0x7ffef0013ea8) at ../../shared/proparser/qmakeevaluator.cpp:654\n"
      >~"#28 0x00007fffe404b917 in QMakeEvaluator::visitProBlock (this=0x2caaa40, pro=0x7ffef00094a0, tokPtr=0x7ffef0013a8a) at ../../shared/proparser/qmakeevaluator.cpp:515\n"
      >~"#29 0x00007fffe4051915 in QMakeEvaluator::visitProFile (this=0x2caaa40, pro=0x7ffef00094a0, type=QMakeHandler::EvalProjectFile, flags=...) at ../../shared/proparser/qmakeevaluator.cpp:1375\n"
      >~"#30 0x00007fffe4060068 in ProFileEvaluator::accept (this=0x2caa8d8, pro=0x7ffef00094a0, flags=...) at ../../shared/proparser/profileevaluator.cpp:198\n"
      >~"#31 0x00007fffe244ca90 in Qt4ProjectManager::Qt4ProFileNode::evaluate (this=0x2caa280) at qt4nodes.cpp:1581\n"
      >~"#32 0x00007fffe244cb16 in Qt4ProjectManager::Qt4ProFileNode::asyncEvaluate (this=0x2caa280, fi=...) at qt4nodes.cpp:1594\n"
      >~"#33 0x00007fffe2463248 in QtConcurrent::StoredInterfaceMemberFunctionCall0<Qt4ProjectManager::Qt4ProFileNode::EvalResult, void (Qt4ProjectManager::Qt4ProFileNode::*)(QFutureInterface<Qt4ProjectManager::Qt4ProFileNode::EvalResult>&), Qt4ProjectManager::Qt4ProFileNode>::run (this=0x2caaf80) at ../../libs/utils/runextensions.h:83\n"
      >~"#34 0x00007ffff630f275 in QThreadPoolThread::run (this=0x2416b40) at concurrent/qthreadpool.cpp:107\n"
      >~"#35 0x00007ffff631fee4 in QThreadPrivate::start (arg=0x2416b40) at thread/qthread_unix.cpp:349\n"
      >~"#36 0x00007ffff6069e9a in start_thread (arg=0x7fff11ffb700) at pthread_create.c:308\n"
      >~"#37 0x00007ffff5880ccd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112\n"
      >~"#38 0x0000000000000000 in ?? ()\n"
      >116^done
      
      	Locals		
      		evalResult	Qt4ProjectManager::Qt4ProFileNode::EvalOk (3)	Qt4ProjectManager::Qt4ProFileNode::EvalResult
      		pro	@0x7ffef00094a0	ProFile
      			m_directoryName	"/depot/fkleint/qt-5s/qtbase/src/opengl"	QString
      			m_fileName	"/depot/fkleint/qt-5s/qtbase/src/opengl/opengl.pro"	QString
      			m_hostBuild	false	bool
      			m_ok	true	bool
      			m_proitems	"\001\001\t殤ֆ\006TARGET\002\000Ȉ\010QtOpenGL\007\001\002\tդ\000\002QT\002\003Ȉ\014core-privateȈ\013gui-privateȈ\017widgets-private\007\001\004\t\4232\007DEFINES\003\000Ȉ\025QT_NO_USING_NAMESPACE\007\001\005\t꺚\2770\013win32-msvc*\020\027\t쎓ť\twin32-icc\020\030&\000\t몣ૉ\014QMAKE_LFLAGS\003\000Ȉ\020/BASE:0x63000000\007\000\000\000\001\006\tﱚ৲\{Garbage}
      			m_refCount	2	ProItemRefCount
      		this	@0x2caa280	Qt4ProjectManager::Qt4ProFileNode
      

      Attachments

        Issue Links

          For Gerrit Dashboard: QTCREATORBUG-9835
          # Subject Branch Project Status CR V

          Activity

            People

              buddenha Oswald Buddenhagen
              kleint Friedemann Kleint
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes