lock baseEnv in cache()

sync up; this doesn't actually do anything in qmake.

as we modify the environment, it must be properly locked.
this implies that initFrom() also needs to be called with a lock.

Task-number: QTCREATORBUG-9835
Change-Id: I48bae9af9adaa0518e5a9db0ba08ff057ae14f9f
Reviewed-by: Joerg Bornemann <joerg.bornemann@digia.com>
(cherry picked from qtcreator/d022a2d19cecb00397c2a215fc4e3bf64b1e627b)

cregit: 652bdb8894c249641beb0b8e97af459d4518cd28 https://github.com/qt/qtbase/commit/652bdb8894c249641beb0b8e97af459d4518cd28